# mw-bi-suite-public

./: .env.example  .gitignore  CLAUDE.md  DEVELOPMENT.md  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_price_views.py  003_email_ingestion.py  004_invoice_review.py  005_add_unit_to_invoice_lines.py  006_recipe_components.py  007_ingredient_type_and_packaging.py  008_add_source_recipe_to_ingredients.py  009_add_system_distributor.py  010_add_line_status.py  011_add_scraping_enabled.py  012_add_recipe_yield_weight.py  013_add_distributor_parsing_prompts.py  014_order_hub_tables.py  015_enable_ordering_for_distributors.py
app/: __init__.py  config.py  database.py  main.py
app/api/: distributor_search.py  distributors.py  email_ingestion.py  ingredients.py  invoices.py  order_builder.py  order_list.py  recipes.py  units.py
app/models/: __init__.py  dispute.py  distributor.py  email_message.py  ingredient.py  invoice.py  order.py  order_hub.py  recipe.py
app/schemas/: __init__.py  distributor.py  ingredient.py  order_hub.py  recipe.py
app/services/: __init__.py  cost_calculator.py  distributor_client.py  (+10 more)
docs/: 01-architecture.md  02-data-model.md  04-implementation.md  05-distributors.md  06-open-questions.md  07-scraper-onboarding.md  api-capture-workflow.md  api.md  architecture.md  infrastructure.md
frontend/: package-lock.json  package.json
scripts/: capture_browser.py  test_invoice_parser.py  test_units.py
tests/: conftest.py
(+74 files in other folders)
